--- a/join.htm
+++ b/join.htm
@@ -61,12 +61,12 @@
 
     <div class="i-form">
         <div class="form-group">
-            <label for="usr">Name:</label>
+            <label for="usr">Name*:</label>
             <input type="text" class="form-control usrname" id="usr" maxlength="50">
         </div>
 
         <div class="form-group">
-            <label for="comment">Comment:</label>
+            <label for="comment">Comment*:</label>
             <textarea class="form-control usrcomment" rows="5" id="comment" maxlength="120"></textarea>
         </div>
 
@@ -84,7 +84,7 @@
 
         <div class="radio-form radcheck">
             <div>
-                <label><span>iTechArt Working Experience:</span></label>
+                <label><span>iTechArt Working Experience*:</span></label>
             </div>
             <label class="radio-inline"><input type="radio" name="optradio" value="Less than 1 year" required>Less than 1 year</label>
             <label class="radio-inline"><input type="radio" name="optradio" value="1-3 years" required>1-3 years</label>
@@ -115,4 +115,4 @@
     
 
 </body>
-</html>
+</html> 
