--- a/join.htm
+++ b/join.htm
@@ -49,22 +49,43 @@
 
     <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 1</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 2</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 3</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 4</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 5</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 6</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 7</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 8</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 9</div></div>
-          <div class="swiper-slide"><div class="swiper-slide-container">Slide 10</div></div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which jQuery pluging are you using? Does it take options that would allow you to overwrite it's absolute positioning? Could you edit the plugin code to change how it works?Which jQuery pluging are you using? Does it take options that would allow you to overwrite it's absolute positioning?</span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes">People, Food Manager, Awesome People</span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience">Above 3 years</span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love">Stupid Question! Of course!</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 2</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 3</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 4</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 5</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 6</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 7</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 8</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 9</div></div>
+            <div class="swiper-slide"><div class="swiper-slide-container">Slide 10</div></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
     <br>
     <br>
 
+
+    <p class="h1" style="margin-bottom: 5%; margin-top: 0%; font-size: 24px;"><span style="border-bottom:5px solid rgb(235, 28, 35); padding-bottom: 10px;">Don't Be Shy to Left Your Review</span></p>
 
     <!--  Form  -->
 
@@ -76,7 +97,7 @@
 
         <div class="form-group">
             <label for="comment">Comment*:</label>
-            <textarea class="form-control usrcomment" rows="5" id="comment" maxlength="120"></textarea>
+            <textarea class="form-control usrcomment" rows="5" id="comment" maxlength="350"></textarea>
         </div>
 
         <div class="check-form">
