--- a/join.htm
+++ b/join.htm
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
                     </div>
                 </div>
             </div>
@@ -85,107 +85,7 @@
                     </div>
 
                     <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
-                    <div class="user-comment-container">
-                        <span class="user-comment">Which </span>
-                    </div>
-
-                    <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
-                    </div>
-
-                    <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
-                    </div>
-
-                    <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
-                    <div class="user-comment-container">
-                        <span class="user-comment">Which </span>
-                    </div>
-
-                    <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
-                    </div>
-
-                    <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
-                    </div>
-
-                    <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
-                    <div class="user-comment-container">
-                        <span class="user-comment">Which </span>
-                    </div>
-
-                    <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
-                    </div>
-
-                    <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
-                    </div>
-
-                    <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
-                    <div class="user-comment-container">
-                        <span class="user-comment">Which </span>
-                    </div>
-
-                    <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes">People, Food Manager, Awesome People</span></p>
-                    </div>
-
-                    <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience">Above 3 years</span></p>
-                    </div>
-
-                    <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love">Stupid Question! Of course!</span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
-                    <div class="user-comment-container">
-                        <span class="user-comment">Which </span>
-                    </div>
-
-                    <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes">People, Food Manager, Awesome People</span></p>
-                    </div>
-
-                    <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience">Above 3 years</span></p>
-                    </div>
-
-                    <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love">Stupid Question! Of course!</span></p>
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
                     </div>
                 </div>
             </div>
@@ -205,7 +105,7 @@
                     </div>
 
                     <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love"></span></p>
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
                     </div>
                 </div>
             </div>
@@ -217,35 +117,135 @@
                     </div>
 
                     <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes">People, Food Manager, Awesome People</span></p>
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
                     </div>
 
                     <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience">Above 3 years</span></p>
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
                     </div>
 
                     <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love">Stupid Question! Of course!</span></p>
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
                     </div>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="swiper-slide-container">
-                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;">Vlad</span> says:</p></div>
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
                     <div class="user-comment-container">
                         <span class="user-comment">Which </span>
                     </div>
 
                     <div class="user-likes-container">
-                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes">People, Food Manager, Awesome People</span></p>
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
                     </div>
 
                     <div class="user-experience-container">
-                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience">Above 3 years</span></p>
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
                     </div>
 
                     <div class="user-love-container">
-                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2: </span><span class="user-love">Stupid Question! Of course!</span></p>
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which </span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which </span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which </span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which </span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-container">
+                    <div class="user-name-container"><p class="user-name-title"><span class="user-name" style="font-weight:700;"></span> says:</p></div>
+                    <div class="user-comment-container">
+                        <span class="user-comment">Which </span>
+                    </div>
+
+                    <div class="user-likes-container">
+                        <p class="user-likes-title"><span style="font-weight:700; color:rgb(235, 28, 35);">Likes: </span><span class="user-likes"></span></p>
+                    </div>
+
+                    <div class="user-experience-container">
+                        <p class="user-experience-title"><span style="font-weight:700; color:rgb(25, 143, 86);">Experience: </span><span class="user-experience"></span></p>
+                    </div>
+
+                    <div class="user-love-container">
+                            <p class="user-love-title"><span style="font-weight:700; color:rgb(129, 25, 143);">Do You Like DQA2?: </span><span class="user-love"></span></p>
                     </div>
                 </div>
             </div>
