--- a/join.htm
+++ b/join.htm
@@ -15,6 +15,10 @@
     </head>
 <body>
 
+    <div id="bg">
+        <img src="background.jpg" alt="">
+    </div>
+
    <!-- Navigation bar -->
    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -27,7 +31,7 @@
                 <a id="li-navbar" class="navbar-brand" href="home.htm">DQA 2</a>
             </div>
             <div class="navbar-header" style="padding-top: 10px;">
-                <a href="join.htm" class="btn btn-info btn-lg disabled" style="background-color: rgb(255, 255, 255); color: rgb(235, 28, 35);" role="button">Join Now</a>
+                <a href="join.htm" class="btn btn-info btn-lg disabled" style="background-color: rgb(255, 255, 255); color: rgb(235, 28, 35);" role="button">Review</a>
             </div>
             <div class="navber-header">
                 <ul id="ul-header" class="nav navbar-nav">
@@ -259,7 +263,7 @@
     <p class="h1" style="margin-bottom: 5%; margin-top: 0%; font-size: 24px;"><span style="border-bottom:5px solid rgb(235, 28, 35); padding-bottom: 10px;">Don't Be Shy to Left Your Review</span></p>
 
     <!--  Form  -->
-
+    
     <div class="i-form">
         <div class="form-group">
             <label for="usr">Name*:</label>
@@ -309,11 +313,13 @@
         </div>
 
     </div>
-
-    <!-- Bot Sign -->
-
-    <p class="sign-bot">© 2017 Vlad Melekh</p>
     
+    <br>
+    <br>
+    <!-- Bot Sign -->
+    <div class="bg-sign">
+        <p class="sign-bot">© 2017 Vlad Melekh</p>
+    </div>
     <script src="RestAPI\node_modules\swiper\dist\js\swiper.min.js"></script>
 
 
