--- a/home.htm
+++ b/home.htm
@@ -25,7 +25,7 @@
                     <a id="li-navbar" class="navbar-brand" href="home.htm">DQA 2</a>
                 </div>
                 <div class="navbar-header" style="padding-top: 10px;">
-                    <a href="join.htm" class="btn btn-info btn-lg" role="button">Join Now</a>
+                    <a href="join.htm" class="btn btn-info btn-lg" role="button">Review</a>
                 </div>
                 <div class="navber-header">
                     <ul id="ul-header" class="nav navbar-nav">
@@ -63,7 +63,7 @@
     <p class="h1">About Us:</p>
     <br>
 
-    <div class="container-fluid" style="background-color: rgb(244,244,244);">
+    <div class="container-fluid" style="background-color: rgb(229, 235, 241);">
 
         <!-- 1st -->
 
@@ -109,7 +109,7 @@
 
         <!-- 4th -->
 
-        <div class="row" id="row-4" style="background-color: rgb(244,244,244);">
+        <div class="row" id="row-4" style="background-color: rgb(229, 235, 241);">
             <div class="col-sm-6" style="text-align: right;">
                 <h2><span style="border-bottom: 5px solid rgb(235, 28, 35); padding-bottom: 10px;">We Love Memes!</span></h2>
                 <br>
