--- a/home.htm
+++ b/home.htm
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- Slideshow -->
-    <div class="SlidesContainer">
+    <div class="SlidesContainer" style="margin-top: 10%;">
         <div class="mySlide">
             <img class="mySlides fade-in" src="images/IMG_0995.jpg">
             <img class="mySlides fade-in" src="images/IMG_4628.jpg">
